--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-		  package="ru.swapii.turbofilm.android">
-	<uses-sdk android:minSdkVersion="13"/>
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<application android:name="TurboApp" android:icon="@drawable/icon" android:label="@string/app_name">
-		<activity android:name="ru.swapii.turbofilm.activity.LoginActivity" android:noHistory="true">
+	package="org.gigahub.turbofilm"
+	android:versionCode="1"
+	android:versionName="1.0.0-SNAPSHOT">
+
+	<uses-sdk
+		android:minSdkVersion="14"
+		android:targetSdkVersion="19" />
+
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+	<application
+		android:label="@string/app_name"
+		android:name=".TurboApplication"
+		android:allowBackup="true">
+
+		<activity
+			android:name=".screens.SplashActivity"
+			android:windowSoftInputMode="stateHidden">
+
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"/>
-				<category android:name="android.intent.category.LAUNCHER"/>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+
 		</activity>
-		<activity android:name="ru.swapii.turbofilm.activity.AboutActivity"/>
-		<activity android:name="ru.swapii.turbofilm.activity.SeriesActivity"/>
-		<activity android:name="ru.swapii.turbofilm.activity.EpisodesActivity"/>
+
+		<activity
+			android:name=".screens.AuthActivity" />
+
+		<activity
+			android:name=".screens.home.HomeActivity" />
+		<activity android:name=".screens.season.SeasonActivity" />
+		<activity android:name=".screens.episode.EpisodeActivity" />
+
 	</application>
+
 </manifest>
