--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>com.google.android</groupId>
+			<groupId>android</groupId>
 			<artifactId>android</artifactId>
-			<version>4.0.1.2</version>
+			<version>4.4_r1</version>
 			<scope>provided</scope>
 		</dependency>
 
