Переделка экрана сезона. Небольшие правки внешнего вида. Исправление работы фрагмента управления воспроизведением.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,9 @@
 			</activity>
 
 		<activity android:name=".screens.season.SeasonActivity_" />
-		<activity android:name=".screens.episode.EpisodeActivity_" />
+
+		<activity android:name=".screens.episode.EpisodeActivity_"
+			android:screenOrientation="landscape"/>
 
 	</application>
 
