Исправление сборки проекта. Экран логина подстраивается под высоту.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,9 @@
 		android:theme="@style/TurboFilm"
 		android:allowBackup="true">
 
-		<activity android:name=".screens.AuthActivity_" />
+		<activity
+			android:name=".screens.AuthActivity_"
+			android:windowSoftInputMode="adjustResize" />
 
 		<activity android:name=".screens.home.HomeActivity_">
 
