--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
 	<application
 		android:label="@string/app_name"
-		android:name=".Turbik_"
+		android:name=".TurboApp_"
 		android:theme="@style/TurboFilm"
 		android:allowBackup="true">
 
