--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.gigahub.turbofilm"
+	package="tv.turbik"
 	android:versionCode="1"
 	android:versionName="1.0.0-SNAPSHOT">
 
@@ -9,16 +9,17 @@
 		android:targetSdkVersion="19" />
 
 	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 	<application
 		android:label="@string/app_name"
-		android:name=".TurboApplication_"
+		android:name=".TurboApp_"
 		android:theme="@style/TurboFilm"
 		android:allowBackup="true">
 
 		<activity
-			android:name=".screens.AuthActivity_" />
+			android:name=".screens.AuthActivity_"
+			android:windowSoftInputMode="adjustResize" />
 
 		<activity
 			android:name=".screens.home.HomeActivity_">
