--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,43 @@
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>android</module>
-		<module>dao_generator</module>
+		<module>tf-android</module>
+		<module>tf-android-daogen</module>
 	</modules>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
+    <dependencyManagement>
+
+        <dependencies>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.7</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-android</artifactId>
+                <version>1.7.7</version>
+            </dependency>
+        </dependencies>
+
+    </dependencyManagement>
+
+    <build>
+
+        <extensions>
+
+            <extension>
+                <groupId>co.leantechniques</groupId>
+                <artifactId>maven-buildtime-extension</artifactId>
+                <version>2.0</version>
+            </extension>
+
+        </extensions>
+
+    </build>
 
 </project>
