--- a/tf-android/pom.xml
+++ b/tf-android/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<name>Android Client</name>
-	<artifactId>turbofilm-android</artifactId>
+	<artifactId>tf-android</artifactId>
 	<packaging>apk</packaging>
 
 	<parent>
@@ -63,14 +63,7 @@
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-android</artifactId>
-			<version>1.7.2</version>
 		</dependency>
 
 		<dependency>
@@ -93,6 +86,16 @@
 
 		<plugins>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
@@ -112,6 +115,33 @@
 					</execution>
 				</executions>
 			</plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
+                <executions>
+                    <execution>
+                        <id>copy-manifest</id>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <resources>
+                                <resource>
+                                    <directory>src/main/</directory>
+                                    <includes>
+                                        <include>AndroidManifest.xml</include>
+                                    </includes>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
 			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -147,13 +177,15 @@
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 				<artifactId>android-maven-plugin</artifactId>
-				<version>3.8.2</version>
+				<version>4.0.0-rc.1</version>
 				<extensions>true</extensions>
-
 				<configuration>
 					<sdk>
 						<platform>19</platform>
 					</sdk>
+                    <dexPreDex>true</dexPreDex>
+                    <dexPreDexLibLocation>${env.TMPDIR}/android/preDex</dexPreDexLibLocation>
+                    <dexOptimize>false</dexOptimize>
 				</configuration>
 			</plugin>
 
