--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,15 @@ dependencies {
     apt "org.androidannotations:androidannotations:3.1"
     compile 'org.androidannotations:androidannotations-api:3.1'
 
-    compile 'com.actionbarsherlock:actionbarsherlock:4.4.0@aar'
-    compile 'org.slf4j:slf4j-android:1.7.7'
+    compile 'com.android.support:support-v4:20.0.0@aar'
+    compile 'com.android.support:support-v13:20.0.0@aar'
+    compile 'com.android.support:appcompat-v7:20.0.0@aar'
+
     compile 'de.greenrobot:greendao:1.3.7'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.8.6'
+
     compile 'commons-codec:commons-codec:1.9'
     compile 'commons-io:commons-io:2.4'
+    compile 'org.slf4j:slf4j-android:1.7.7'
 
 }
