--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,6 @@ dependencies {
     compile 'org.androidannotations:androidannotations-api:3.1'
 
     compile 'com.android.support:support-v4:20.0.0@aar'
-    compile 'com.android.support:support-v13:20.0.0@aar'
     compile 'com.android.support:appcompat-v7:20.0.0@aar'
 
     compile 'de.greenrobot:greendao:1.3.7'
@@ -63,6 +62,7 @@ dependencies {
 
     compile 'commons-codec:commons-codec:1.9'
     compile 'commons-io:commons-io:2.4'
+    compile 'com.google.guava:guava:18.0'
     compile 'org.slf4j:slf4j-android:1.7.7'
 
 }
