--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.1"
 
     defaultConfig {
         applicationId "tv.turbik"
         minSdkVersion 15
-        targetSdkVersion 20
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -54,10 +54,12 @@ dependencies {
     apt "org.androidannotations:androidannotations:3.1"
     compile 'org.androidannotations:androidannotations-api:3.1'
 
-    compile 'com.android.support:support-v4:20.0.0@aar'
-    compile 'com.android.support:appcompat-v7:20.0.0@aar'
+    compile 'com.android.support:support-v4:21.0.0@aar'
+    compile 'com.android.support:recyclerview-v7:21.0.0@aar'
+    compile 'com.android.support:appcompat-v7:21.0.0@aar'
 
     compile 'de.greenrobot:greendao:1.3.7'
+	compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.8.6'
 
     compile 'commons-codec:commons-codec:1.9'
