--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,12 +59,12 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.0@aar'
 
     compile 'de.greenrobot:greendao:1.3.7'
+	compile 'de.greenrobot:eventbus:2.2.1'
 	compile 'com.squareup.picasso:picasso:2.3.4'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.8.6'
 
     compile 'commons-codec:commons-codec:1.9'
     compile 'commons-io:commons-io:2.4'
-    compile 'com.google.guava:guava:18.0'
     compile 'org.slf4j:slf4j-android:1.7.7'
 
 }
