--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.1"
+    buildToolsVersion "21.0.2"
 
     defaultConfig {
         applicationId "tv.turbik"
@@ -55,8 +55,10 @@ dependencies {
     compile 'org.androidannotations:androidannotations-api:3.1'
 
     compile 'com.android.support:support-v4:21.0.0@aar'
-    compile 'com.android.support:recyclerview-v7:21.0.0@aar'
-    compile 'com.android.support:appcompat-v7:21.0.0@aar'
+	compile 'com.android.support:appcompat-v7:21.0.0@aar'
+	compile 'com.android.support:recyclerview-v7:21.0.0@aar'
+	compile 'com.android.support:cardview-v7:21.0.0@aar'
+	compile 'com.android.support:palette-v7:21.0.0@aar'
 
     compile 'de.greenrobot:greendao:1.3.7'
 	compile 'de.greenrobot:eventbus:2.2.1'
