--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 
 android {
+
     compileSdkVersion 21
-    buildToolsVersion "21.0.2"
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         applicationId "tv.turbik"
@@ -12,12 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
-        release {
-            runProguard false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
+
     sourceSets {
         main {
             java {
@@ -25,16 +21,16 @@ android {
             }
         }
     }
+
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
         exclude 'META-INF/NOTICE.txt'
     }
+
     lintOptions {
         abortOnError false
     }
-    dexOptions {
-        preDexLibraries = true
-    }
+
 }
 
 configurations {
@@ -54,8 +50,8 @@ dependencies {
     apt "org.androidannotations:androidannotations:3.1"
     compile 'org.androidannotations:androidannotations-api:3.1'
 
-    compile 'com.android.support:support-v4:21.0.0@aar'
-	compile 'com.android.support:appcompat-v7:21.0.0@aar'
+    compile 'com.android.support:support-v4:21.0.2@aar'
+	compile 'com.android.support:appcompat-v7:21.0.2@aar'
 	compile 'com.android.support:recyclerview-v7:21.0.0@aar'
 	compile 'com.android.support:cardview-v7:21.0.0@aar'
 	compile 'com.android.support:palette-v7:21.0.0@aar'
@@ -66,6 +62,7 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.8.6'
 
     compile 'commons-io:commons-io:2.4'
-    compile 'org.slf4j:slf4j-android:1.7.7'
+
+    compile 'de.psdev.slf4j-android-logger:slf4j-android-logger:1.0.4'
 
 }
