--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="tv.turbik"
-	android:versionCode="1"
-	android:versionName="1.0.0-SNAPSHOT">
-
-	<uses-sdk
-		android:minSdkVersion="14"
-		android:targetSdkVersion="19" />
+	package="tv.turbik">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -32,7 +26,7 @@
 			</activity>
 
 		<activity android:name=".screens.episode.EpisodeActivity_"
-			android:screenOrientation="landscape"/>
+			android:screenOrientation="sensorLandscape"/>
 
 	</application>
 
